--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brigaintine Engineering - Authorized Distributor of Alfa Laval</title>
+    <title>Brigaintine Engineering | Authorized Alfa Laval Distributor | Heat Exchangers & Separators</title>
+    <meta name="description" content="Brigaintine Engineering is an authorized distributor of Alfa Laval India, specializing in Plate Heat Exchangers, Decanters, and Separators. Providing industrial engineering solutions in Hyderabad.">
+    <meta name="keywords" content="Brigaintine Engineering, Alfa Laval Distributor, Plate Heat Exchangers, Welded Heat Exchangers, Disk Stack Separators, Decanter Centrifuges, Heat Transfer Solutions, Industrial Engineering Hyderabad, Alfa Laval Spare Parts">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://brigaintine.com/">
+    <meta property="og:title" content="Brigaintine Engineering | Authorized Alfa Laval Distributor">
+    <meta property="og:description" content="Authorized distributor of Alfa Laval India. Expertise in Heat Exchangers, Separators, and Decanters.">
+    <meta property="og:image" content="https://brigaintine.com/logo-desk-scaled.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://brigaintine.com/">
+    <meta property="twitter:title" content="Brigaintine Engineering | Authorized Alfa Laval Distributor">
+    <meta property="twitter:description" content="Authorized distributor of Alfa Laval India. Expertise in Heat Exchangers, Separators, and Decanters.">
+    <meta property="twitter:image" content="https://brigaintine.com/logo-desk-scaled.jpg">
+
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
