--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
         <div class="logo-container">
             <img src="logo-desk-scaled.jpg" alt="Brigaintine Engineering Logo">
         </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Alfa Laval</a></li>
