--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
         <div class="logo-container">
             <img src="logo-desk-scaled.jpg" alt="Brigaintine Engineering Logo">
         </div>
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
@@ -45,6 +40,11 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="distributor-logo" style="text-align: right; border-left: 1px solid #334155; padding-left: 1rem;">
             <p style="font-size: 0.6rem; color: #94a3b8; margin: 0;">Authorized</p>
             <p style="font-size: 0.8rem; font-weight: 700; margin: 0;">DISTRIBUTOR</p>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <!-- Slide 3 -->
-                <div class="slide" style="background-image: url('gettyimages-582256640-612x612.jpg');">
+                <div class="slide" style="background-image: url('e4ede1e9a6cb4b8a04a35b77ae611f91_high.webp');">
                     <div class="slide-content">
                         <h2>Industrial Solutions</h2>
                         <p style="font-size: 1.2rem; margin-bottom: 2rem;">Reliable engineering services and high-performance equipment.</p>
