--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brigaintine Engineering | Authorized Alfa Laval Distributor | Heat Exchangers & Separators</title>
-    <meta name="description" content="Brigaintine Engineering is an authorized distributor of Alfa Laval India, specializing in Plate Heat Exchangers, Decanters, and Separators. Providing industrial engineering solutions in Hyderabad.">
+    <title>Brigaintine Engineering | Authorized Alfa Laval Distributor</title>
+    <meta name="description" content="Brigaintine Engineering: Authorized Alfa Laval distributor in India. Expert industrial solutions for Heat Exchangers, Separators & Decanters in Hyderabad.">
     <meta name="keywords" content="Brigaintine Engineering, Alfa Laval Distributor, Plate Heat Exchangers, Welded Heat Exchangers, Disk Stack Separators, Decanter Centrifuges, Heat Transfer Solutions, Industrial Engineering Hyderabad, Alfa Laval Spare Parts">
     
     <!-- Open Graph / Facebook -->
@@ -57,7 +57,7 @@
                 <!-- Slide 1 -->
                 <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1590247813693-5541d1c609fd?auto=format&fit=crop&q=100&w=1920');">
                     <div class="slide-content">
-                        <h2>Spiral Heat Exchangers</h2>
+                        <h1>Spiral Heat Exchangers</h1>
                         <p style="font-size: 1.2rem; margin-bottom: 2rem;">World-class industrial separation and heat transfer solutions.</p>
                     </div>
                 </div>
