--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Alfa Laval</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Application</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li class="nav-dropdown">
+                    <a href="services.html">Services <span class="dropdown-arrow">▾</span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="electrical-troubleshooting-repair.html">Electrical Troubleshooting &amp; Repair</a></li>
+                        <li><a href="reconditioning-of-decanters.html">Reconditioning of Decanters</a></li>
+                        <li><a href="high-speed-separators.html">High-Speed Separators</a></li>
+                        <li><a href="gasketed-plate-heat-exchanger-services.html">Gasketed Plate Heat Exchanger Services</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <div class="hamburger">
@@ -62,7 +68,7 @@
                     </div>
                 </div>
                 <!-- Slide 2 -->
-                <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1537462715879-360eeb61a0ad?auto=format&fit=crop&q=100&w=1920');">
+                <div class="slide" style="background-image: url('gas.jpg');">
                     <div class="slide-content">
                         <h2>Plate Heat Exchangers</h2>
                         <p style="font-size: 1.2rem; margin-bottom: 2rem;">Authorized distributor of Alfa Laval India Pvt Ltd.</p>
@@ -95,61 +101,66 @@
     <section id="about">
         <div class="about-grid">
             <div class="about-text">
-                <h3>Brigaintine Engineering Pvt Ltd.</h3>
-                <p>Deals in a wide range of solutions for Engineering, supply in Industrial, Consumables, Equipments, Machinery along with Engineering Services.</p>
+                <h3>Collaborative partnerships designed to ensure your equipment runs efficiently with minimal downtime.</h3>
+                <p>As a growing engineering services company, we are committed to delivering quality, transparency, and dependable support. Every project is handled with careful attention, ensuring your separation equipment operates efficiently and with reduced downtime.</p>
             </div>
             <div class="about-text">
-                <p>Brigaintine Engineering Pvt Ltd is an Authorized Distributor of Alfa Laval India Pvt. Ltd. and delivering Plate Heat Exchangers, Spare parts & Services for Refrigeration Industries.</p>
-                <p>We offer complete solutions for Heating & Cooling Applications through world class brand Products like ALFA LAVAL. We are also channel partners for Chesterton.</p>
+                <p>Brigantine Engineering Services operates across Australia and New Zealand, founded on principles of quality, unwavering commitment, and customer satisfaction.</p>
+                <p>Our processes follow industry-aligned service standards with a focus on precision inspection, component refurbishment, and optimized equipment performance for marine and industrial applications.</p>
+                <a href="about.html" class="btn">Learn More</a>
             </div>
         </div>
     </section>
 
     <section id="solutions">
-        <h2 class="section-title">Industrial Solutions</h2>
+        <h2 class="section-title">Our Services</h2>
         <div class="products-grid">
-            <!-- Product 01 -->
+            <!-- Service 01 -->
             <div class="product-card">
                 <div class="product-header">
                     <span class="product-num">01</span>
                 </div>
                 <div class="product-body">
-                    <h3>Plate Heat Exchangers</h3>
+                    <h3>Electrical troubleshooting & repair</h3>
                     <div class="divider"></div>
-                    <p>Plate heat exchangers are compact devices used for efficient heat transfer between two fluids. Consisting of corrugated metal plates with gaskets, they create multiple channels for fluids to flow, maximizing surface area. Ideal for diverse applications, these exchangers offer rapid heating or cooling, energy efficiency, and easy maintenance.</p>
+                    <p>Electrical troubleshooting and repair to quickly identify faults and restore safe, reliable operation.</p>
+                    <a href="electrical-troubleshooting-repair.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600; margin-top: 1rem;">Explore Service &rarr;</a>
                 </div>
             </div>
-            <!-- Product 02 -->
+            <!-- Service 02 -->
             <div class="product-card">
                 <div class="product-header">
                     <span class="product-num">02</span>
                 </div>
                 <div class="product-body">
-                    <h3>Welded Heat Exchangers</h3>
+                    <h3>Reconditioning of Decanters</h3>
                     <div class="divider"></div>
-                    <p>A robust design with plates permanently welded together. Eliminating gaskets enhances durability and prevents leakage. These exchangers excel in high-pressure and high-temperature environments, ensuring reliable heat transfer. Their compact size, efficiency, and resistance to thermal stress make them suitable for various industrial processes.</p>
+                    <p>Professional reconditioning of decanters to restore performance and extend equipment life.</p>
+                    <a href="reconditioning-of-decanters.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600; margin-top: 1rem;">Explore Service &rarr;</a>
                 </div>
             </div>
-            <!-- Product 03 -->
+            <!-- Service 03 -->
             <div class="product-card">
                 <div class="product-header">
                     <span class="product-num">03</span>
                 </div>
                 <div class="product-body">
-                    <h3>Disk Stack Separators</h3>
+                    <h3>High speed separators</h3>
                     <div class="divider"></div>
-                    <p>Disk stack separators efficiently separate liquids with varying densities in industries like food, beverage, and oil. Consisting of stacked, rotating disks, they generate high centrifugal forces that separate solids and liquids. Compact and versatile, these separators offer precise control over separation processes, ensuring optimal product quality and efficiency.</p>
+                    <p>High-speed separators designed for rapid, efficient liquid–solid separation.</p>
+                    <a href="high-speed-separators.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600; margin-top: 1rem;">Explore Service &rarr;</a>
                 </div>
             </div>
-            <!-- Product 04 -->
+            <!-- Service 04 -->
             <div class="product-card">
                 <div class="product-header">
                     <span class="product-num">04</span>
                 </div>
                 <div class="product-body">
-                    <h3>Decanter Centrifuges</h3>
+                    <h3>Gasketed Plate Heat Exchanger Services</h3>
                     <div class="divider"></div>
-                    <p>Used for liquid-solid separation. Featuring a rotating bowl and conveyor, they effectively separate components with different densities. Commonly employed in wastewater treatment and various industries, decanters provide efficient and continuous separation, contributing to enhanced process performance.</p>
+                    <p>Complete servicing of gasketed plate heat exchangers for improved efficiency and long-lasting performance.</p>
+                    <a href="gasketed-plate-heat-exchanger-services.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600; margin-top: 1rem;">Explore Service &rarr;</a>
                 </div>
             </div>
         </div>
@@ -190,50 +201,136 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
 
-    <footer class="site-footer">
-        <div class="footer-grid">
-            <!-- About Us -->
-            <div class="footer-col">
-                <h4><span class="bracket">[</span> ABOUT US <span class="bracket">]</span></h4>
-                <p>Deals in a wide range of solutions for Engineering, supply in Industrial, Consumables, Equipments, Machinery along with Engineering Services.</p>
-            </div>
-            <!-- Office -->
-            <div class="footer-col">
-                <h4><span class="bracket">[</span> OFFICE <span class="bracket">]</span></h4>
-                <p>Brigaintine Engineering Pvt Ltd<br>
-                5-5-35/153 A, Prashant Nagar,<br>
-                IDA Kukatpally, Hyderabad,<br>
-                Telangana 500072</p>
-            </div>
-            <!-- Factory -->
-            <div class="footer-col">
-                <h4><span class="bracket">[</span> FACTORY <span class="bracket">]</span></h4>
-                <p>Brigaintine Engineering Pvt Ltd<br>
-                Plot No.23,24,25 & 26<br>
-                at Survey No.553/1/A, Kistapur<br>
-                Village, Medchal, Telangana - 501401</p>
-            </div>
-            <!-- Social Media -->
-            <div class="footer-col">
-                <h4><span class="bracket">[</span> SOCIAL MEDIA <span class="bracket">]</span></h4>
-                <div class="social-links">
-                    <a href="#" class="social-icon facebook">f</a>
-                    <a href="#" class="social-icon twitter">t</a>
-                    <a href="#" class="social-icon youtube">y</a>
-                    <a href="#" class="social-icon linkedin">in</a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="copyright">
-                &copy; 2026. Brigaintine Engineering Pvt Ltd
-            </div>
-            <div class="credits">
-                Designed By +91 8688134897
-            </div>
-        </div>
-    </footer>
+   <footer class="site-footer">
 
+    <!-- ===== FOOTER TOP : LOGO + PRODUCTS ===== -->
+
+    <div class="footer-products-row">
+
+      
+
+        <!-- Plate Heat Exchangers -->
+        <div class="footer-products-col">
+            <h4><span class="bracket">[</span> PLATE HEAT EXCHANGERS <span class="bracket">]</span></h4>
+            <ul>
+                <li>Industrial Line</li>
+                <li>Industrial Semi Welded Line</li>
+                <li>M Line</li>
+                <li>Wide Gap</li>
+                <li>Brazed PHE</li>
+                <li>Fusion Bonded PHE</li>
+                <li>Alfacond</li>
+                <li>Alfavap</li>
+            </ul>
+        </div>
+
+        <!-- Welded Heat Exchangers -->
+        <div class="footer-products-col">
+            <h4><span class="bracket">[</span> WELDED HEAT EXCHANGERS <span class="bracket">]</span></h4>
+            <ul>
+                <li>Spiral Heat Exchangers</li>
+                <li>Welded Plate & BHE</li>
+                <li>Packinox</li>
+                <li>Duroshell</li>
+                <li>Zepack</li>
+            </ul>
+        </div>
+
+        <!-- Disk Stack Separators -->
+        <div class="footer-products-col">
+            <h4><span class="bracket">[</span> DISK STACK SEPARATORS <span class="bracket">]</span></h4>
+            <ul>
+                <li>MAB Separators</li>
+                <li>MMB</li>
+                <li>MOPX</li>
+                <li>Alfa 500</li>
+            </ul>
+        </div>
+
+        <!-- Models -->
+        <div class="footer-products-col">
+            <h4><span class="bracket">[</span> DISK STACK MODELS <span class="bracket">]</span></h4>
+            <ul>
+                <li>Aldec</li>
+                <li>Lynx</li>
+                <li>P1</li>
+                <li>P2</li>
+                <li>P3</li>
+            </ul>
+        </div>
+
+    </div>
+
+
+    <!-- ===== FOOTER MAIN GRID ===== -->
+
+    <div class="footer-grid">
+
+        <!-- Contact -->
+        <div class="footer-col">
+            <h4><span class="bracket">[</span> CONTACT US <span class="bracket">]</span></h4>
+            <p>contact@brigantine.com</p>
+            <p>+61 (0) 2 XXXX XXXX</p>
+            <p>Australia &amp; New Zealand</p>
+        </div>
+
+        <!-- Links -->
+        <div class="footer-col">
+            <h4><span class="bracket">[</span> QUICK LINKS <span class="bracket">]</span></h4>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <!-- Services -->
+        <div class="footer-col">
+            <h4><span class="bracket">[</span> SERVICES <span class="bracket">]</span></h4>
+            <ul>
+                <li><a href="electrical-troubleshooting-repair.html">Electrical Troubleshooting</a></li>
+                <li><a href="reconditioning-of-decanters.html">Decanter Reconditioning</a></li>
+                <li><a href="high-speed-separators.html">High Speed Separators</a></li>
+                <li><a href="gasketed-plate-heat-exchanger-services.html">Heat Exchanger Services</a></li>
+            </ul>
+        </div>
+
+        <!-- Social -->
+        <div class="footer-col">
+            <h4><span class="bracket">[</span> SOCIAL MEDIA <span class="bracket">]</span></h4>
+
+            <div class="social-links">
+                <a href="#" class="social-icon facebook">f</a>
+                <a href="#" class="social-icon twitter">t</a>
+                <a href="#" class="social-icon youtube">y</a>
+            </div>
+        </div>
+
+    </div>
+
+
+    <!-- ===== FOOTER BOTTOM ===== -->
+
+    <div class="footer-bottom">
+
+        <div class="copyright">
+            © 2026. Brigantine Engineering Services
+        </div>
+
+    </div>
+
+</footer>
     <script src="script.js"></script>
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/8778589938" 
+   class="whatsapp-float" 
+   target="_blank"
+   title="Chat with us on WhatsApp">
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+         alt="WhatsApp Chat">
+
+</a>
 </body>
 </html>
