--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Brigantine Engineering Services</title>
+    <title>About Brigantine Engineering | Expert Industrial Solutions</title>
 
     <meta name="description" content="Learn about Brigantine Engineering — our vision, mission, and the team dedicated to delivering world-class industrial engineering services.">
 
