--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Contact Us | Brigantine Engineering Services</title>
+  <title>Contact Brigantine Engineering | Get Expert Technical Support</title>
 
   <meta name="description"
-    content="Contact Brigantine Engineering Services. Send a message or find our location." />
+    content="Contact Brigantine Engineering Services for expert industrial solutions. Reach out for technical support, project inquiries, or visit our office." />
 
   <link rel="stylesheet" href="style.css" />
 
