--- a/electrical-troubleshooting-repair.html
+++ b/electrical-troubleshooting-repair.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Electrical Troubleshooting &amp; Repair | Brigantine Engineering Services
-    </title>
+    <title>Electrical Troubleshooting & Repair | Brigantine Engineering</title>
     <meta
       name="description"
-      content="Fast, accurate, and reliable electrical troubleshooting and repair for industrial, commercial, and residential facilities. Certified technicians with 24/7 emergency support."
+      content="Fast, accurate, and reliable electrical troubleshooting and repair for industrial, commercial, and residential facilities. Expert support by Brigantine."
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="service-page.css" />
