--- a/gasketed-plate-heat-exchanger-services.html
+++ b/gasketed-plate-heat-exchanger-services.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gasketed Plate Heat Exchanger Services | Brigantine Engineering Services</title>
+    <title>Plate Heat Exchanger Services | Brigantine Engineering</title>
+    <meta name="description" content="Professional cleaning, re-gasketing, and testing services for gasketed plate heat exchangers. Maximize efficiency and prevent leaks with our expert care.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
