--- a/high-speed-separators.html
+++ b/high-speed-separators.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>High Speed Separators | Brigantine Engineering Services</title>
+    <title>High Speed Separator Maintenance | Brigantine Engineering</title>
+    <meta name="description" content="Specialized maintenance and reconditioning services for high-speed separators. Ensure precision balancing and optimal separation with Brigantine Engineering.">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap"
