--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brigaintine Engineering | Authorized Alfa Laval Distributor</title>
-    <meta name="description" content="Brigaintine Engineering: Authorized Alfa Laval distributor in India. Expert industrial solutions for Heat Exchangers, Separators & Decanters in Hyderabad.">
+    <title>Brigantine Engineering | Authorized Alfa Laval India Distributor</title>
+    <meta name="description" content="Authorized Alfa Laval distributor in India. Industrial solutions for Heat Exchangers, Separators & Decanters by Brigantine Engineering.">
     <meta name="keywords" content="Brigaintine Engineering, Alfa Laval Distributor, Plate Heat Exchangers, Welded Heat Exchangers, Disk Stack Separators, Decanter Centrifuges, Heat Transfer Solutions, Industrial Engineering Hyderabad, Alfa Laval Spare Parts">
     
     <!-- Open Graph / Facebook -->
