--- a/reconditioning-of-decanters.html
+++ b/reconditioning-of-decanters.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reconditioning of Decanters | Brigantine Engineering Services</title>
+    <title>Professional Decanter Reconditioning | Brigantine Services</title>
+    <meta name="description" content="Expert reconditioning of decanter centrifuges to restore performance, improve efficiency, and extend equipment life. Service by Brigantine Engineering.">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap"
