--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services | Brigantine Engineering Services</title>
+    <title>Industrial Engineering & Maintenance | Brigantine Services</title>
+    <meta name="description" content="Industrial services including electrical troubleshooting, decanter reconditioning, and high-speed separator maintenance by Brigantine Engineering.">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap"
